--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       Skeleton CSS library
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <!--
+      Fontawesome CSS library
+    -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>ActivePause</title>
     <!--
       Roboto font
